--- a/platformio.ini
+++ b/platformio.ini
@@ -28,9 +28,9 @@ flash_filesystem = FLASH_SPIFFS
 build_platform = BUILD_ATARI
 build_bus      = SIO
 
-build_board    = fujinet-lolind32pro    ; FujiNet for Atari based on Lolin D32 Pro
+;build_board    = fujinet-lolind32pro    ; FujiNet for Atari based on Lolin D32 Pro
 ;build_board    = fujinet-liligo-T7      ; FujiNet for Atari based on Liligo T7
-;build_board    = fujinet-atari-v1       ; FujiNet for Atari v1.0 and up
+build_board    = fujinet-atari-v1       ; FujiNet for Atari v1.0 and up
 ;build_board    = fujinet-v1-8mb         ; Atari generic/custom with 8mb flash
 ;build_board    = fujinet-v1-4mb         ; Atari generic/custom with 4mb flash
 
@@ -87,7 +87,7 @@ build_board    = fujinet-lolind32pro    ; FujiNet for Atari based on Lolin D32 P
 [platformio]
 description = FujiNet retro computer to ESP32 WiFi Multifunction Firmware
 default_envs = ${fujinet.build_board}
-data_dir = $PROJECT_DIR/data/${fujinet.build_platform}
+data_dir = /$PROJECT_DIR/data/${fujinet.build_platform}
 
 [env]
 ; Common settings for all enivornments
@@ -162,6 +162,7 @@ build_flags =
     ;-D MASTERIES_SPI_FIX ; Hardware mod for Masteries Rev0
     ;-D NO3STATE ; no external tri-state on FN data out to A2, done internally
     ;-D REV1DETECT ; Only 3 people on earth need this enabled. You know who you are :P
+;-D SP_OVER_SLIP ; to make SmartPort over SLIP build
 
 ; Fuji for Mac 68000 using FujiApple Rev 0 Prototype (ESP32-DEVKITC-VE 8MB Flash, 8MB PSRAM)
 [env:fujimac-rev0]
