--- a/platformio.ini
+++ b/platformio.ini
@@ -13,14 +13,14 @@
 ;esp32_platform_version = 3.2.0 ; For Bluetooth support
 ;esp32_platform_version = 3.4.0 ; old stable
 esp32_platform_version = 6.3.2 ; latest
-esp32s3_platform_version = 6.1.0
+esp32s3_platform_version = 6.3.2
 
 esp32_platform_packages = 
 ;    toolchain-riscv32-esp @ 8.4.0+2021r2-patch5 ; required for platform version < 5.3.0, remove this line when upgrading to the >=5.3.0
 
 ; Choose SPIFFS or LITTLEFS for the filesystem used on internal flash
-flash_filesystem = FLASH_SPIFFS 
-;flash_filesystem = FLASH_LITTLEFS
+;flash_filesystem = FLASH_SPIFFS 
+flash_filesystem = FLASH_LITTLEFS
 
 ; Override platform name when creating firmware ZIP file
 ; ex: fujinet-CUSTOMNAME-v1.0.zip
@@ -31,8 +31,8 @@ build_platform = BUILD_ATARI
 build_bus      = SIO
 
 ;build_board    = fujinet-lolind32pro    ; FujiNet for Atari based on Lolin D32 Pro
-;build_board    = fujinet-liligo-T7      ; FujiNet for Atari based on Liligo T7
-build_board    = fujinet-atari-v1       ; FujiNet for Atari v1.0 and up
+build_board    = fujinet-ydesp32s3       ; FujiNet for Atari based on ESP32 S3 Dev Board
+; build_board    = fujinet-atari-v1       ; FujiNet for Atari v1.0 and up
 ;build_board    = fujinet-v1-8mb         ; Atari generic/custom with 8mb flash
 ;build_board    = fujinet-v1-4mb         ; Atari generic/custom with 4mb flash
 
@@ -89,7 +89,7 @@ build_board    = fujinet-atari-v1       ; FujiNet for Atari v1.0 and up
 [platformio]
 description = FujiNet retro computer to ESP32 WiFi Multifunction Firmware
 default_envs = ${fujinet.build_board}
-data_dir = /$PROJECT_DIR/data/${fujinet.build_platform}
+data_dir = $PROJECT_DIR/data/${fujinet.build_platform}
 
 [env]
 ; Common settings for all enivornments
@@ -105,7 +105,7 @@ lib_ldf_mode = deep+
 ; upload_port = COM16 ; Windows
 upload_speed = 460800 ;921600
 
-monitor_port = ${env.upload_port} ; Windows
+;monitor_port = ${env.upload_port} ; Windows
 monitor_speed = ${env.upload_speed} ;921600
 monitor_filters = esp32_exception_decoder, time ;,log2file
 
@@ -380,3 +380,18 @@ build_flags =
     ;-D VERBOSE_ATX         ; Debug ATX files
     ;-D FN_HISPEED_INDEX=0  ; Set SIO High Speed Index
     -D BLUETOOTH_SUPPORT   ; enable BlueTooth support
+
+; FujiNet for Atari based on YD-ESP32S3 Pink Development board (ESP32 WROVER 16MB Flash, 8MB PSRAM)
+[env:fujinet-ydesp32s3]
+platform = espressif32@${fujinet.esp32s3_platform_version}
+platform_packages = ${fujinet.esp32_platform_packages}
+board = fujinet-ydesp32s3
+build_type = debug
+build_flags =
+    ${env.build_flags}
+    -D PINMAP_YDESP32S3
+    ;-D DEBUG_UDPSTREAM     ; enable UDP to display IN/OUT packets
+    ;-D VERBOSE_SIO         ; Debug SIO
+    ;-D VERBOSE_ATX         ; Debug ATX files
+    ;-D FN_HISPEED_INDEX=0  ; Set SIO High Speed Index
+    ;-D BLUETOOTH_SUPPORT   ; enable BlueTooth support
