--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,7 @@ build_platform = BUILD_ATARI
 build_bus      = SIO
 
 ;build_board    = fujinet-lolind32pro    ; FujiNet for Atari based on Lolin D32 Pro
-build_board    = fujinet-ydesp32s3       ; FujiNet for Atari based on ESP32 S3 Dev Board
+build_board    = fujinet-esp32-wrover-ie-8mb       ; FujiNet for Atari based on ESP32 Dev Board
 ; build_board    = fujinet-atari-v1       ; FujiNet for Atari v1.0 and up
 ;build_board    = fujinet-v1-8mb         ; Atari generic/custom with 8mb flash
 ;build_board    = fujinet-v1-4mb         ; Atari generic/custom with 4mb flash
@@ -381,15 +381,15 @@ build_flags =
     ;-D FN_HISPEED_INDEX=0  ; Set SIO High Speed Index
     -D BLUETOOTH_SUPPORT   ; enable BlueTooth support
 
-; FujiNet for Atari based on YD-ESP32S3 Pink Development board (ESP32 WROVER 16MB Flash, 8MB PSRAM)
-[env:fujinet-ydesp32s3]
-platform = espressif32@${fujinet.esp32s3_platform_version}
+;; FujiNet for Atari based on Lolin D32 Pro (ESP32 WROVER 16MB Flash, 8MB PSRAM)
+[env:fujinet-esp32-wrover-ie-8mb]
+platform = espressif32@${fujinet.esp32_platform_version}
 platform_packages = ${fujinet.esp32_platform_packages}
-board = fujinet-ydesp32s3
+board = fujinet-esp32-wrover-ie-8mb
 build_type = debug
 build_flags =
     ${env.build_flags}
-    -D PINMAP_YDESP32S3
+    -D PINMAP_WROVERIE
     ;-D DEBUG_UDPSTREAM     ; enable UDP to display IN/OUT packets
     ;-D VERBOSE_SIO         ; Debug SIO
     ;-D VERBOSE_ATX         ; Debug ATX files
