--- a/platformio.ini
+++ b/platformio.ini
@@ -395,3 +395,4 @@ build_flags =
     ;-D VERBOSE_ATX         ; Debug ATX files
     ;-D FN_HISPEED_INDEX=0  ; Set SIO High Speed Index
     -D BLUETOOTH_SUPPORT   ; enable BlueTooth support
+    -D NO_BUTTONS
